took off sango project for now and edited resume higher up the page. added link to keeb project. fixed navbar spacing.

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -32,7 +32,7 @@
     align-items: flex-start;
     justify-content: left;
     padding: 80px;
-    max-width: 100%;
+    overflow: hidden;
     /* float: left; */
 }
 
